BZ#371 Refactored code and changed to use nanotime